Antialiasing and unsharpen filters
- Added antialiasing filter
- Added unsharpen filter
- Added sync timeout to the load settings command
- Added indication of LUT table type on CSV Import/Export
- Version update

--- a/application/mainwindow.ui
+++ b/application/mainwindow.ui
@@ -527,7 +527,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Synchronise</string>
+    <string>Synchronize</string>
    </property>
    <property name="toolTip">
     <string>Applies the Settings of the currently selected Camera to all Cameras in the current Broadcast-Group</string>
