--- a/dct_widgets/infobox/infobox.ui
+++ b/dct_widgets/infobox/infobox.ui
@@ -119,7 +119,6 @@
            <font>
             <family>Courier</family>
             <pointsize>10</pointsize>
-            <weight>50</weight>
             <bold>false</bold>
            </font>
           </property>
@@ -218,7 +217,6 @@
            <font>
             <family>Courier</family>
             <pointsize>10</pointsize>
-            <weight>50</weight>
             <bold>false</bold>
            </font>
           </property>
@@ -251,7 +249,6 @@
            <font>
             <family>Courier</family>
             <pointsize>10</pointsize>
-            <weight>50</weight>
             <bold>false</bold>
            </font>
           </property>
@@ -284,7 +281,6 @@
            <font>
             <family>Courier</family>
             <pointsize>10</pointsize>
-            <weight>50</weight>
             <bold>false</bold>
            </font>
           </property>
@@ -351,7 +347,6 @@
            <font>
             <family>Courier</family>
             <pointsize>10</pointsize>
-            <weight>50</weight>
             <bold>false</bold>
            </font>
           </property>
@@ -384,7 +379,6 @@
            <font>
             <family>Courier</family>
             <pointsize>10</pointsize>
-            <weight>50</weight>
             <bold>false</bold>
            </font>
           </property>
@@ -417,7 +411,6 @@
            <font>
             <family>Courier</family>
             <pointsize>10</pointsize>
-            <weight>50</weight>
             <bold>false</bold>
            </font>
           </property>
@@ -481,7 +474,6 @@
            <font>
             <family>Courier</family>
             <pointsize>10</pointsize>
-            <weight>50</weight>
             <bold>false</bold>
            </font>
           </property>
@@ -545,7 +537,6 @@
            <font>
             <family>Courier</family>
             <pointsize>10</pointsize>
-            <weight>50</weight>
             <bold>false</bold>
            </font>
           </property>
@@ -578,7 +569,6 @@
            <font>
             <family>Courier</family>
             <pointsize>10</pointsize>
-            <weight>50</weight>
             <bold>false</bold>
            </font>
           </property>
@@ -610,7 +600,6 @@
            <font>
             <family>Courier</family>
             <pointsize>10</pointsize>
-            <weight>50</weight>
             <bold>false</bold>
            </font>
           </property>
@@ -948,7 +937,7 @@ You can download the source code of this software from GitLab:</string>
            <cursorShape>PointingHandCursor</cursorShape>
           </property>
           <property name="text">
-           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://github.com/KAYA-Instruments/SDI-Camera-GUI&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#bacfff;&quot;&gt;https://github.com/KAYA-Instruments/SDI-Camera-GUI&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://kaya-instruments.github.io/SDI-Control-Point&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#bacfff;&quot;&gt;https://kaya-instruments.github.io/SDI-Control-Point&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="openExternalLinks">
            <bool>true</bool>
